# nina-micropython

./: .gitignore  .gitmodules  README.md  build.sh  flash.sh  manifest.py  nina.conf  nina.overlay  test_ed25519.py  test_hydrogen.py  test_st25dv.py  usb.conf
crypto/: README.txt  __init__.py
frozen/: boot.py  st25dv.py  thyrakey.py
modules/: micropython.cmake
modules/nrf_oberon-micropython/: micropython.cmake  micropython.mk  nrf_oberon.c
nina/: CMakeLists.txt
nina/src/: machine_bitstream.c
nina/zephyr/: module.yaml
